--- a/rutas/src/app/usuario/ruta-usuario-principal/ruta-usuario-principal.component.html
+++ b/rutas/src/app/usuario/ruta-usuario-principal/ruta-usuario-principal.component.html
@@ -1,2 +1,3 @@
-<h1>Mostrando usuario</h1>
+<h1 class="rojo">Mostrando usuario</h1>
+<p-button label="Click" ></p-button>
 <app-mostrar-usuario></app-mostrar-usuario>
